--- a/style/style.css
+++ b/style/style.css
@@ -67,7 +67,7 @@ section.imagem p {
 }
 
 section#img01{
-    background-image: url(../DESAFIO-CORDEL/imagens/background001.jpg);
+    background-image: url(../imagens/background001.jpg);
     background-position: center center;
     
 
@@ -75,7 +75,7 @@ section#img01{
 }
 
 section#img02{
-    background-image: url(../DESAFIO-CORDEL/imagens/background002.jpg);
+    background-image: url(../imagens/background002.jpg);
     background-position: right center;
     
 
